downgraded back to firefox 25.0.1 to get js tests working again, fix response notification bug for other responders, wrapped responses on profile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -636,6 +636,14 @@ rgb(237, 255, 143), rgb(50, 118, 177))
       @include center-block();
       width: 80%;
     }
+    .public_posts, .personal_posts {
+      .thought_content {
+        font-size: 20px;
+        a {
+          line-height: 1.2;
+        }
+      }
+    }
   }
 
   .profile_link {
